# xmonad-config

./: README.md  README.org  my-xmonad.cabal  package.yaml  stack.yaml  startup.sh  taffybar.hs  xmobar.hs  xmobarrc.hs  xmonad.hs
icons/: arrow_down.xbm  arrow_up.xbm  battery.xbm  cpu.xbm  layout-bsp.xbm  layout-float.xbm  layout-full.xbm  layout-gimp.xbm  layout-mirror.xbm  layout-tall.xbm  mem.xbm  net-wifi.xbm  temp.xbm
polybar/: config
rofi/: config  rofi.rasi
src/: xmonad.hs
